tests/diagnostics/naming/casing/type_not_pascal_case/expect.txt
# exit: 1
input/main.coppice:1:6: error: type name must be PascalCase
  type userProfile :: struct {
       ^
